<resources>
    <string name="app_name">DailyJournalApp</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="times">Prayer Times</string>
    <string name="material">Materials</string>
    <string name="fajr">Fajr</string>
    <string name="zuhr">Zuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="hyperlink"><a href= "http://www.islamicstudies.info/tafheem.php?sura=2&amp;verse=152&amp;verse=157">Surah Baqarah 152-157</a></string>
</resources>